--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
     sdk: flutter
   get: ^4.3.8
   google_fonts: ^2.1.0
+  lint: ^1.7.2
+
 
 
 
@@ -47,7 +49,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  flutter_lints: ^1.0.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -77,7 +79,7 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: DoHyeon   #임의로 지정을 한다.
+    - family: DoHyeon   # 임의로 지정을 한다.
       fonts:
       - asset: assets/fonts/BMDOHYEON_otf.otf
 
