--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   beamer: ^0.14.1
   cupertino_icons: ^1.0.2
   flutter_multi_formatter: ^2.5.1
+  provider: ^6.0.2
 
 dev_dependencies:
   flutter_test:
