--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_multi_formatter: ^2.5.1
   provider: ^6.0.2
+  dio: ^4.0.4
 
 dev_dependencies:
   flutter_test:
