--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   location: ^4.3.0
   shared_preferences: ^2.0.13
   firebase_core: ^1.12.0
+  firebase_auth: ^3.3.7
 
 dev_dependencies:
   flutter_test:
