--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   shared_preferences: ^2.0.13
   firebase_core: ^1.12.0
   firebase_auth: ^3.3.7
+  shimmer: ^2.0.0
 
 dev_dependencies:
   flutter_test:
