--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_core: ^1.12.0
   firebase_auth: ^3.3.7
   shimmer: ^2.0.0
+  cloud_firestore: ^3.1.8
 
 dev_dependencies:
   flutter_test:
